# saddle_detector

./: .gitignore  CMakeLists.txt  README.md  chessboard.ppm
python/: CMakeLists.txt  headers.txt  headers.txt.in
python/src2/: cv2.cpp  gen2.py
python/test/: pysaddletest.py.in
src/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fast.cpp  fast.hpp  fast_score.cpp  lbq.cpp  saddlepts.cpp  saddlepts.cpp~  sorb.cpp  sorb.h
src_prev/: CMakeLists.txt  anyoption.mexa64  fast.cpp  fast.hpp  fast.mexa64  fast_score.cpp  fast_score.mexa64  nms.mexa64  saddlepts.cpp  saddlepts.cpp~  sorb.cpp  sorb.h
